--- a/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/package.json
+++ b/projetos/02-criando-um-blog-com-painel-administrativo-crud-completo/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "slugify": "^1.6.5"
   }
 }
