--- a/projetos/03-conversor-de-excel-para-html-e-pdf-com-nodejs/package.json
+++ b/projetos/03-conversor-de-excel-para-html-e-pdf-com-nodejs/package.json
@@ -9,6 +9,7 @@
   "author": "Hugo da Rocha Brandão",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "html-pdf": "^3.0.1"
   }
 }
