--- a/16-iniciando-com-tdd/mini-projeto/package.json
+++ b/16-iniciando-com-tdd/mini-projeto/package.json
@@ -4,7 +4,7 @@
   "description": "Pequeno projeto para se estudar Jest, na pratica.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Hugo da Rocha Brandão",
   "license": "ISC",
