--- a/16-iniciando-com-tdd/mini-projeto/package.json
+++ b/16-iniciando-com-tdd/mini-projeto/package.json
@@ -9,6 +9,8 @@
   "author": "Hugo da Rocha Brandão",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.5.1"
+    "express": "^4.17.3",
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2"
   }
 }
