Preparada a base do projeto, onde foi criada e testada uma rota raiz da aplicacao. Adicionada uma observacao da aula, dentro do readme.

--- a/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
+++ b/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema de compartilhamento de imagens com TDD e MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Hugo da Rocha Brandão",
   "license": "ISC",
