--- a/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
+++ b/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1"
   }
 }
