--- a/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
+++ b/projetos/09-sistema-de-compartilhamento-de-imagens-com-tdd-e-mongodb/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongodb": "^4.0.1"
+    "mongodb": "^4.0.1",
+    "mongoose": "^5.13.20"
   },
   "devDependencies": {
     "jest": "^26.6.3"
