--- a/projetos/10-mercado-pago-nodejs/package.json
+++ b/projetos/10-mercado-pago-nodejs/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Hugo da Rocha Brandão",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "mercadopago": "^1.3.1"
+  }
 }
